# silero-mvp

./: .dockerignore  Dockerfile  docker-compose.yml  hindi1.py  hindi2.py  main.py  pyproject.toml  russian.py  text_normalizer.py
