[project]
name = "silerio-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aksharamukha>=2.3",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "scipy>=1.16.3",
    "silero>=0.5.2",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
    "wsproto>=1.3.2",
]
